--- a/com.vreshly/Views/Shop/Checkout.cshtml
+++ b/com.vreshly/Views/Shop/Checkout.cshtml
@@ -48,155 +48,91 @@
         </div>
         <div class="row">
             <div class="col-lg-6 col-12">
-                <form action="#">
-                    <div class="checkbox-form">
-                        <h3>Billing Details</h3>
-                        <div class="row">
+                <div class="coupon-accordion">
+                    <h3>Billing Details? <span id="showBilling">Click here for Address</span></h3>
+                    <div id="billing-details" class="coupon-content">
+                        <div id="coupon-info">
+                            <form action="#">
+                                <div class="checkbox-form">
+                                    <h3>Billing Details</h3>
+                                    <div class="row">
 
-                            <div class="col-md-6">
-                                <div class="checkout-form-list">
-                                    <label>First Name <span class="required">*</span></label>
-                                    <input placeholder="" id="firstName" name="firstName" type="text">
-                                </div>
-                            </div>
-                            <div class="col-md-6">
-                                <div class="checkout-form-list">
-                                    <label>Last Name <span class="required">*</span></label>
-                                    <input placeholder="" id="lastName" name="lastName" type="text">
-                                </div>
-                            </div>
+                                        <div class="col-md-6">
+                                            <div class="checkout-form-list">
+                                                <label>First Name <span class="required">*</span></label>
+                                                <input placeholder="" id="firstName" name="firstName" type="text">
+                                            </div>
+                                        </div>
+                                        <div class="col-md-6">
+                                            <div class="checkout-form-list">
+                                                <label>Last Name <span class="required">*</span></label>
+                                                <input placeholder="" id="lastName" name="lastName" type="text">
+                                            </div>
+                                        </div>
 
-                            <div class="col-md-12">
-                                <div class="checkout-form-list">
-                                    <label>Address <span class="required">*</span></label>
-                                    <input placeholder="Address" id="address" name="address" type="text">
-                                </div>
-                            </div>
+                                        <div class="col-md-12">
+                                            <div class="checkout-form-list">
+                                                <label>Address <span class="required">*</span></label>
+                                                <input placeholder="Address" id="address" name="address" type="text">
+                                            </div>
+                                        </div>
 
-                            <div class="col-md-12">
-                                <div class="checkout-form-list">
-                                    <label>Town / City <span class="required">*</span></label>
-                                    <input type="text" id="city" name="city">
-                                </div>
-                            </div>
-                            <div class="col-md-6">
-                                <div class="checkout-form-list">
-                                    <label>State / County <span class="required">*</span></label>
-                                    <input placeholder="" type="text" id="state" name="state">
-                                </div>
-                            </div>
-                            <div class="col-md-6">
-                                <div class="checkout-form-list">
-                                    <label>Postcode / Zip <span class="required">*</span></label>
-                                    <input placeholder="" id="zipcode" name="zipcode" type="text">
-                                </div>
-                            </div>
+                                        <div class="col-md-12">
+                                            <div class="checkout-form-list">
+                                                <label>Town / City <span class="required">*</span></label>
+                                                <input type="text" id="city" name="city">
+                                            </div>
+                                        </div>
+                                        <div class="col-md-6">
+                                            <div class="checkout-form-list">
+                                                <label>State / County <span class="required">*</span></label>
+                                                <input placeholder="" type="text" id="state" name="state">
+                                            </div>
+                                        </div>
+                                        <div class="col-md-6">
+                                            <div class="checkout-form-list">
+                                                <label>Postcode / Zip <span class="required">*</span></label>
+                                                <input placeholder="" id="zipcode" name="zipcode" type="text">
+                                            </div>
+                                        </div>
 
-                            <div class="col-md-6">
-                                <div class="checkout-form-list">
-                                    <label>Phone <span class="required">*</span></label>
-                                    <input type="text" id="phoneNumber" name="phoneNumber">
+                                        <div class="col-md-6">
+                                            <div class="checkout-form-list">
+                                                <label>Phone <span class="required">*</span></label>
+                                                <input type="text" id="phoneNumber" name="phoneNumber">
+                                            </div>
+                                        </div>
+                                        <div class="col-md-6">
+                                            <div class="country-select">
+                                                <label>Delivery Method<span class="required">*</span></label>
+                                                <select class="myniceselect2  wide rounded-0" id="deliveryMethod" name="deliveryMethod">
+                                                    <option value="0" data-price="0">Select Delivery method</option>
+                                                </select>
+                                            </div>
+                                        </div>
+                                    </div>
+
                                 </div>
-                            </div>
-                            <div class="col-md-6">
-                                <div class="country-select">
-                                    <label>Delivery Method<span class="required">*</span></label>
-                                    <select class="myniceselect2  wide rounded-0" id="deliveryMethod" name="deliveryMethod">
-                                        <option value="0" data-price="0">Select Delivery method</option>
-                                    </select>
+                                <div class="order-button-payment">
+                                    <input value="Place order" id="place_order" type="button">
                                 </div>
-                            </div>
+                            </form>
                         </div>
-                        @*<div class="different-address">
-                                <div class="ship-different-title">
-                                    <div>
-                                        <input id="ship-box" type="checkbox">
-                                        <label for="ship-box">Ship to a different address?</label>
-                                    </div>
-                                </div>
-                                <div id="ship-box-info" class="row mt-2">
-                                    <div class="col-md-12">
-                                        <div class="myniceselect country-select clearfix">
-                                            <label>Country <span class="required">*</span></label>
-                                            <select class="myniceselect nice-select wide rounded-0">
-                                                <option data-display="Bangladesh">Bangladesh</option>
-                                                <option value="uk">London</option>
-                                                <option value="rou">Romania</option>
-                                                <option value="fr">French</option>
-                                                <option value="de">Germany</option>
-                                                <option value="aus">Australia</option>
-                                            </select>
-                                        </div>
-                                    </div>
-                                    <div class="col-md-12">
-                                        <div class="checkout-form-list">
-                                            <label>First Name <span class="required">*</span></label>
-                                            <input placeholder="" type="text">
-                                        </div>
-                                    </div>
-                                    <div class="col-md-12">
-                                        <div class="checkout-form-list">
-                                            <label>Last Name <span class="required">*</span></label>
-                                            <input placeholder="" type="text">
-                                        </div>
-                                    </div>
-                                    <div class="col-md-12">
-                                        <div class="checkout-form-list">
-                                            <label>Company Name</label>
-                                            <input placeholder="" type="text">
-                                        </div>
-                                    </div>
-                                    <div class="col-md-12">
-                                        <div class="checkout-form-list">
-                                            <label>Address <span class="required">*</span></label>
-                                            <input placeholder="Street address" type="text">
-                                        </div>
-                                    </div>
-                                    <div class="col-md-12">
-                                        <div class="checkout-form-list">
-                                            <input placeholder="Apartment, suite, unit etc. (optional)" type="text">
-                                        </div>
-                                    </div>
-                                    <div class="col-md-12">
-                                        <div class="checkout-form-list">
-                                            <label>Town / City <span class="required">*</span></label>
-                                            <input type="text">
-                                        </div>
-                                    </div>
-                                    <div class="col-md-12">
-                                        <div class="checkout-form-list">
-                                            <label>State / County <span class="required">*</span></label>
-                                            <input placeholder="" type="text">
-                                        </div>
-                                    </div>
-                                    <div class="col-md-12">
-                                        <div class="checkout-form-list">
-                                            <label>Postcode / Zip <span class="required">*</span></label>
-                                            <input placeholder="" type="text">
-                                        </div>
-                                    </div>
-                                    <div class="col-md-12">
-                                        <div class="checkout-form-list">
-                                            <label>Email Address <span class="required">*</span></label>
-                                            <input placeholder="" type="email">
-                                        </div>
-                                    </div>
-                                    <div class="col-md-12">
-                                        <div class="checkout-form-list">
-                                            <label>Phone <span class="required">*</span></label>
-                                            <input type="text">
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="order-notes mt-3">
-                                    <div class="checkout-form-list checkout-form-list-2">
-                                        <label>Order Notes</label>
-                                        <textarea id="checkout-mess" cols="30" rows="10" placeholder="Notes about your order, e.g. special notes for delivery."></textarea>
-                                    </div>
-                                </div>
-                            </div>*@
                     </div>
-                </form>
+
+                    @*<h3>Payment <span id="showpayment"></span></h3>
+                    <div id="paymentButton" class="coupon-checkout-content">
+                        <div class="coupon-info">
+                            <form action="#">
+                                <p class="checkout-coupon">
+                                    <input placeholder="Coupon code" type="text">
+                                    <input class="coupon-inner_btn" value="Apply Coupon" type="submit">
+                                </p>
+                            </form>
+                        </div>
+                    </div>*@
+                </div>
+
             </div>
             <div class="col-lg-6 col-12">
                 <div class="your-order">
@@ -210,22 +146,6 @@
                                 </tr>
                             </thead>
                             <tbody id="checkoutitems">
-                                @*<tr class="cart_item">
-                                        <td class="cart-product-name">
-                                            Vestibulum suscipit<strong class="product-quantity">
-                                                × 1
-                                            </strong>
-                                        </td>
-                                        <td class="cart-product-total text-center"><span class="amount">£165.00</span></td>
-                                    </tr>
-                                    <tr class="cart_item">
-                                        <td class="cart-product-name">
-                                            Vestibulum suscipit<strong class="product-quantity">
-                                                × 1
-                                            </strong>
-                                        </td>
-                                        <td class="cart-product-total text-center"><span class="amount">£165.00</span></td>
-                                    </tr>*@
                             </tbody>
                             <tfoot>
                                 <tr class="cart-subtotal">
@@ -244,7 +164,7 @@
                             </tfoot>
                         </table>
                     </div>
-                    <div class="payment-method">
+                    @*<div class="payment-method">
                         <div class="payment-accordion">
                             <div id="accordion">
                                 <div class="card">
@@ -288,13 +208,15 @@
                                             <p>Make your payment directly into our bank account. Please use your Order ID as the payment reference. Your order won’t be shipped until the funds have cleared in our account.</p>
                                         </div>
                                     </div>
+
+
+
+
                                 </div>
                             </div>
-                            <div class="order-button-payment">
-                                <input value="Place order" type="submit">
-                            </div>
+                            
                         </div>
-                    </div>
+                    </div>*@
                 </div>
             </div>
         </div>
@@ -305,5 +227,33 @@
 @section FooterScripts
 {
     <script src="~/js/checkout.js"></script>
+    <script src="https://js.paystack.co/v1/inline.js"></script>
+    <script type="text/javascript">
+        $('#pay').on('click', function (e) {
+            e.preventDefault();
+            payWithPaystack();
+        });
+        //paymentForm.addEventListener('submit', payWithPaystack, false);
+
+        function payWithPaystack() {
+            var handler = PaystackPop.setup({
+                key: 'pk_test_7cf58a8bf6b47da1e14fe2840a30936ac0dcea11', // Replace with your public key
+                email: document.getElementById('email-address').value,
+                amount: document.getElementById('amount').value * 100, // the amount value is multiplied by 100 to convert to the lowest currency unit
+                currency: 'NGN', // Use GHS for Ghana Cedis or USD for US Dollars
+                ref: 'YOUR_REFERENCE', // Replace with a reference you generated
+                callback: function (response) {
+                    //this happens after the payment is completed successfully
+                    var reference = response.reference;
+                    alert('Payment complete! Reference: ' + reference);
+                    // Make an AJAX call to your server with the reference to verify the transaction
+                },
+                onClose: function () {
+                    alert('Transaction was not completed, window closed.');
+                },
+            });
+            handler.openIframe();
+        }
+    </script>
 
 }
