--- a/com.vreshly/Views/Account/Information.cshtml
+++ b/com.vreshly/Views/Account/Information.cshtml
@@ -51,7 +51,7 @@
                                     <div class="myaccount-content">
                                         <h3>Dashboard</h3>
                                         <div class="welcome">
-                                            <p>Hello, <strong>Alex Aya</strong> (If Not <strong>Aya !</strong><a href="login-register.html" class="logout"> Logout</a>)</p>
+                                            <p>Hello, <span id="name">Alex Aya</span> </p>
                                         </div>
                                         <p class="mb-0">From your account dashboard. you can easily check & view your recent orders, manage your shipping and billing addresses and edit your password and account details.</p>
                                     </div>
@@ -59,7 +59,7 @@
                                 <!-- Single Tab Content End -->
                                 <!-- Single Tab Content Start -->
                                 <div class="tab-pane fade" id="orders" role="tabpanel">
-                                    <div class="myaccount-content">
+                                    <div class="myaccount-content" id="order-list">
                                         <h3>Orders</h3>
                                         <div class="myaccount-table table-responsive text-center">
                                             <table class="table table-bordered">
@@ -72,32 +72,98 @@
                                                         <th>Action</th>
                                                     </tr>
                                                 </thead>
-                                                <tbody>
-                                                    <tr>
-                                                        <td>1</td>
-                                                        <td>Aug 22, 2018</td>
-                                                        <td>Pending</td>
-                                                        <td>$3000</td>
-                                                        <td><a href="cart.html" class="btn obrien-button-2 primary-color rounded-0">View</a></td>
-                                                    </tr>
-                                                    <tr>
-                                                        <td>2</td>
-                                                        <td>July 22, 2018</td>
-                                                        <td>Approved</td>
-                                                        <td>$200</td>
-                                                        <td><a href="cart.html" class="btn obrien-button-2 primary-color rounded-0">View</a></td>
-                                                    </tr>
-                                                    <tr>
-                                                        <td>3</td>
-                                                        <td>June 12, 2019</td>
-                                                        <td>On Hold</td>
-                                                        <td>$990</td>
-                                                        <td><a href="cart.html" class="btn obrien-button-2 primary-color rounded-0">View</a></td>
-                                                    </tr>
+                                                <tbody id="order-history">
+                                                    @*<tr>
+                                                            <td>1</td>
+                                                            <td>Aug 22, 2018</td>
+                                                            <td>Pending</td>
+                                                            <td>$3000</td>
+                                                            <td><a href="cart.html" class="btn obrien-button-2 primary-color rounded-0">View</a></td>
+                                                        </tr>
+                                                        <tr>
+                                                            <td>2</td>
+                                                            <td>July 22, 2018</td>
+                                                            <td>Approved</td>
+                                                            <td>$200</td>
+                                                            <td><a href="cart.html" class="btn obrien-button-2 primary-color rounded-0">View</a></td>
+                                                        </tr>
+                                                        <tr>
+                                                            <td>3</td>
+                                                            <td>June 12, 2019</td>
+                                                            <td>On Hold</td>
+                                                            <td>$990</td>
+                                                            <td><a href="cart.html" class="btn obrien-button-2 primary-color rounded-0">View</a></td>
+                                                        </tr>*@
                                                 </tbody>
                                             </table>
                                         </div>
                                     </div>
+                                    <div class="myaccount-content" id="order-details" style="display:none">
+                                    <h3><span><a href="javascript:void()" class="close">x</a></span>  Order Details</h3>
+                                    <div class="col-md-12">
+                                        <section>
+                                            <div class="col-lg-12">
+                                                <div class="pull-left">
+                                                <p class="pull-left">Order No. <span class="order-id"></span></p><div class="clearfix"></div>
+                                                <p class="pull-left"><span class="total-items"></span>item(s)</p><div class="clearfix"></div>
+                                                <p class="pull-left">placed on <span class="order-date"></span></p><div class="clearfix"></div>
+                                                <p class="pull-left">Total: <span class="sub-total"></span></p><div class="clearfix"></div>
+                                                </div>
+                                                <div class="clearfix"></div>
+                                            </div>
+                                        </section>
+                                        <div class="col-md-12">
+                                            <br/>
+                                            <section>
+                                                <h5 style="text-transform:uppercase; text-align: left; font-size: small;" >Items in your order list</h5>
+                                                <div class="row" id="items">
+                                                    
+                                                </div>
+                                            </section>
+                                        </div>
+                                    
+                                        <div class="col-md-12" style="padding: 5px 0 2px 5px;display: flex; flex-direction: row;">
+                                            <div class="col-md-6" style="margin-right: 3px;">
+                                                <div class="card">
+                                                    <div class="card-header">
+                                                        <span style="text-transform:uppercase;">Payment Information</span>
+                                                    </div>
+                                                    <div class="card-body" style="text-align: left;">
+                                                            <div class="card-title"><strong>Payment Method</strong></div>
+                                                            <div class="card-text payment-method"></div>
+                                                            <br/>
+                                                            <div class="card" style="width: 18rem;">
+                                                                <div class="card-header">
+                                                                    <span style=""> Payment Details</span>
+                                                                </div>
+                                                                <ul class="list-group list-group-flush">
+                                                                <li class="list-group-item">Items Total: <span class="item-total"></span></li>
+                                                                <li class="list-group-item">Shipping Fee: <span class="shipping-fee"></span></li>
+                                                                <li class="list-group-item">Total: <span class="sub-total"></span></li>
+                                                                </ul>
+                                                            </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="col-md-6" style="margin-left: 0;">
+                                                <div class="card">
+                                                    <div class="card-header">
+                                                        <span style="text-transform:uppercase;">Delivery Information</span>
+                                                    </div>
+                                                    <div class="card-body" style="text-align: left;">
+                                                            <div class="card-title"><strong>Delivery Method</strong></div>
+                                                            <div class="card-text"><span class="delivery-method"></span></div>
+                                                            <br/><br/>
+                                                            <div class="card-title"><strong>Delivery Address</strong></div>
+                                                            <div class="card-text"  style="overflow-wrap:break-word; word-wrap: break-word;hyphens: auto;">
+                                                                <div style="overflow-wrap:break-word; word-wrap: break-word;hyphens: auto;"><span class="delivery-address"></span> </div>
+                                                            </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+</div>
                                 </div>
                                 <!-- Single Tab Content End -->
                                 <!-- Single Tab Content Start -->
@@ -222,3 +288,6 @@
     </div>
 </div>
 <!-- my account wrapper end -->
+@section FooterScripts {
+    <script src="~/js/account.js"></script>
+}
